@@ -19,6 +19,9 @@ Version 3.11.1 (rgerhards), 2008-02-12
 - bugfix: setting for $EscapeCopntrolCharactersOnReceive was not 
   properly initialized
 - clarified usage of space-cc property replacer option
+- improved abort diagnostic handler
+- some initial effort for malloc/free runtime debugging support
+- bugfix: using dynafile actions caused rsyslogd abort
 ---------------------------------------------------------------------------
 Version 3.11.0 (rgerhards), 2008-01-31
 - implemented queued actions
